# omegat-ai-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md
archive/: ai_plugin.groovy
plugin/: pom.xml
plugin/src/main/java/com/omegat/plugin/: LocalAiTranslateProvider.java
plugin/src/test/java/com/omegat/plugin/: LocalAiTranslateProviderTest.java
service/: .env.example  ai_style_rules.example.txt  config.py  logging_config.py  main.py  model_utils.py  models.py  pyproject.toml  router.py  start.sh  style_rules.example.txt  terminology_sources.toml.example
service/glossary/: agent.py  cli.py  extractor.py  presets.py  rater.py  sources.py  state.py  terminology.py  terms.py  tmx.py  writer.py
service/summary/: agent.py  prompt.j2  state.py
service/tests/: conftest.py  test_extractor.py  test_glossary.py  test_main.py  test_presets.py  test_qa.py  test_rater.py  test_summary.py  test_terminology.py  test_terminology_sources.py  test_tm.py  test_translation.py
service/tm/: state.py
service/translation/: agent.py  pipeline.py  prompt.j2  prompt.py  qa.py  qa_prompt.j2
